hello/hello_svc.yaml
kind: Service
  apiVersion: v1
  metadata:
    name: hello
    namespace: hellopython
    resourceVersion: '296552'
    labels:
      app: hello
      name: hello
  spec:
    ports:
      - name: 8080-tcp
        protocol: TCP
        port: 8080
        targetPort: 8080
    selector:
      app: hello
      deploymentconfig: hello
